--- a/com.cartoon.main/com.cartoon.user/pom.xml
+++ b/com.cartoon.main/com.cartoon.user/pom.xml
@@ -107,5 +107,13 @@
             <groupId>com.cartoon</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-seata</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
