--- a/com.cartoon.main/pom.xml
+++ b/com.cartoon.main/pom.xml
@@ -17,6 +17,9 @@
         <module>com.cartoon.user.oauth.api</module>
         <module>com.cartoon.social.contact</module>
         <module>com.cartoon.social.contact.api</module>
+        <module>com.cartoon.panicBuying</module>
+        <module>com.cartoon.panicBuying.api</module>
+        <module>test01</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
