--- a/springCouldDemo/gift/pom.xml
+++ b/springCouldDemo/gift/pom.xml
@@ -43,6 +43,12 @@
         <groupId>com.gy</groupId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+    </dependency>
+
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-aop</artifactId>
